Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -163,6 +163,7 @@
     educated blockchain user, we should be aware whenever we are depositing
     custody of our assets or tokens to anyone else.
 - key: benefits-of-tokenization
+  title: Benefits of Tokenization
   shortTitle: Benefits
   details: >-
     1) **Transparency**  - Transparency is one of the key benefits that
@@ -173,4 +174,25 @@
     markets more efficient. Additionally, the decentralized nature of blockchain
     can help reduce the risks of fraud and corruption, as well as improve
     auditability.
-  title: Benefits of Tokenization
+
+    2) **Increased Liquidity** - The tokenization of assets can provide
+    increased liquidity for otherwise illiquid assets. This can in turn help
+    finance small and medium enterprises (SMEs) and the real economy. This can
+    make markets more efficient and help diversify investor risks.
+
+    3) **Increased Speed and Lower Cost** - With automation in the issuance,
+    distribution, and management of securities, as well as securities servicing
+    and corporate actions, the entire securities transaction process becomes
+    more efficient and cost-effective for both issuers and investors.
+    Additionally, the distributed nature of the network with no single point of
+    failure, the immutability of the ledger, and the application of cryptography
+    make the infrastructure more resilient and safe.
+
+    4) **More Opportunities for Investors** - Fractional ownership of assets
+    provides many benefits to investors, including the ability to hold claims
+    that are smaller than what is typically seen in stocks and bonds. This type
+    of ownership also allows for the tokenization of assets, which can help
+    investors gain access to asset classes and risks that they may not have
+    otherwise had the ability to invest in.
+
+    5) 
