Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -195,4 +195,9 @@
     investors gain access to asset classes and risks that they may not have
     otherwise had the ability to invest in.
 
-    5) 
+    5) **Better Regulation** - real-time information about on-chain events can
+    help regulators better understand what's happening with specific projects.
+    This, in turn, can lead to more informed decision-making when it comes to
+    compliance and interactions with those behind the project.
+
+    6) 
