--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -166,6 +166,8 @@
   title: Benefits of Tokenization
   shortTitle: Benefits
   details: >-
+    ### 
+
     1) **Transparency**  - Transparency is one of the key benefits that
     blockchain technology can bring to the financial markets. By enhancing
     information recording and sharing, blockchain can help create a more
@@ -175,12 +177,27 @@
     can help reduce the risks of fraud and corruption, as well as improve
     auditability.
 
-    2) **Increased Liquidity** - The tokenization of assets can provide
+
+
+    ### Improvements in Investment
+
+
+    1) **Increased Liquidity** - The tokenization of assets can provide
     increased liquidity for otherwise illiquid assets. This can in turn help
     finance small and medium enterprises (SMEs) and the real economy. This can
     make markets more efficient and help diversify investor risks.
 
-    3) **Increased Speed and Lower Cost** - With automation in the issuance,
+    2) **More Opportunities for Investors** - Fractional ownership of assets
+    provides many benefits to investors, including the ability to hold claims
+    that are smaller than what is typically seen in stocks and bonds. This type
+    of ownership also allows for the tokenization of assets, which can help
+    investors gain access to asset classes and risks that they may not have
+    otherwise had the ability to invest in.
+
+
+    ### Improved Financial System 
+
+    1) **Increased Speed and Lower Cost** - With automation in the issuance,
     distribution, and management of securities, as well as securities servicing
     and corporate actions, the entire securities transaction process becomes
     more efficient and cost-effective for both issuers and investors.
@@ -188,19 +205,12 @@
     failure, the immutability of the ledger, and the application of cryptography
     make the infrastructure more resilient and safe.
 
-    4) **More Opportunities for Investors** - Fractional ownership of assets
-    provides many benefits to investors, including the ability to hold claims
-    that are smaller than what is typically seen in stocks and bonds. This type
-    of ownership also allows for the tokenization of assets, which can help
-    investors gain access to asset classes and risks that they may not have
-    otherwise had the ability to invest in.
-
-    5) **Better Regulation** - real-time information about on-chain events can
+    2) **Better Regulation** - real-time information about on-chain events can
     help regulators better understand what's happening with specific projects.
     This, in turn, can lead to more informed decision-making when it comes to
     compliance and interactions with those behind the project.
 
-    6) **Settlement and Clearing** - Settlement and clearing can be complex
+    3) **Settlement and Clearing** - Settlement and clearing can be complex
     processes, especially in traditional financial markets. In these markets,
     central clearing houses act as central counterparties (CCPs) to both sides
     of a trade. This ensures that the trade is matched and executed even if one
