--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -166,6 +166,9 @@
   title: Benefits of Tokenization
   shortTitle: Benefits
   details: >-
+    ### Flexibility
+
+
     ### 
 
     1) **Transparency**  - Transparency is one of the key benefits that
@@ -179,20 +182,20 @@
 
 
 
-    ### Improvements in Investment
+    ### More power to Retail Investor
 
-
-    1) **Increased Liquidity** - The tokenization of assets can provide
-    increased liquidity for otherwise illiquid assets. This can in turn help
-    finance small and medium enterprises (SMEs) and the real economy. This can
-    make markets more efficient and help diversify investor risks.
-
-    2) **More Opportunities for Investors** - Fractional ownership of assets
+    1) **More Opportunities for Investors** - Fractional ownership of assets
     provides many benefits to investors, including the ability to hold claims
     that are smaller than what is typically seen in stocks and bonds. This type
     of ownership also allows for the tokenization of assets, which can help
     investors gain access to asset classes and risks that they may not have
     otherwise had the ability to invest in.
+
+
+    2) **Increased Liquidity** - The tokenization of assets can provide
+    increased liquidity for otherwise illiquid assets. This can in turn help
+    finance small and medium enterprises (SMEs) and the real economy. This can
+    make markets more efficient and help diversify investor risks.
 
 
     ### Improved Financial System 
