Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -169,7 +169,7 @@
     ### Flexibility
 
 
-    ### 
+    ### Some other heading
 
     1) **Transparency**  - Transparency is one of the key benefits that
     blockchain technology can bring to the financial markets. By enhancing
