Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -166,20 +166,33 @@
   title: Benefits of Tokenization
   shortTitle: Benefits
   details: >-
-    ### Flexibility
+    ### Innovation
+
+    1) **Compensation** - Tokens offer a more flexible way of compensating team
+    members than was previously available. For example, you can compensate team
+    members in tokens based on the amount of their contribution and the
+    criticality of their work. This allows the project to focus on developing
+    the business rather than on fundraising. Also, everyone who receives tokens
+    is now a shareholder and is aligned with the same goals.
 
 
-    ### Some other heading
+    2) **Rewards** - Tokenization provides a more innovative way to compensate
+    members or users who believe in a project's long-term success by distribute
+    tokens based on bonding curves. This system would favour early adopters.
+    Another example of this could be seen with Vote Escrowed Tokenomics where
+    members who have locked their tokens away can earn boosted rewards because
+    they believe in the project's longevity.
 
-    1) **Transparency**  - Transparency is one of the key benefits that
-    blockchain technology can bring to the financial markets. By enhancing
-    information recording and sharing, blockchain can help create a more
-    transparent market environment, with data that is more accurate and
-    reliable. This in turn can help boost investor confidence and make the
-    markets more efficient. Additionally, the decentralized nature of blockchain
-    can help reduce the risks of fraud and corruption, as well as improve
-    auditability.
 
+    3) **User Acquisition** - Startups typically spend a lot of money on
+    marketing to acquire new customers through big advertizing companies like
+    Google, Apple, Facebook, etc. However, this doesn't provide much help to the
+    founders or to the end users. A better form of customer acquisition is
+    through air drops. Air drops are one of the most innovative ways of
+    acquiring new users as they reward the end user and also reduce the cost and
+    the risk to the startup, as they are paying the acquired users in the form
+    of tokens. This method is more beneficial to everyone involved - the
+    founders, the end users, and even the startup itself!
 
 
     ### More power to Retail Investor
@@ -208,12 +221,21 @@
     failure, the immutability of the ledger, and the application of cryptography
     make the infrastructure more resilient and safe.
 
-    2) **Better Regulation** - real-time information about on-chain events can
+    2) **Transparency**  - Transparency is one of the key benefits that
+    blockchain technology can bring to the financial markets. By enhancing
+    information recording and sharing, blockchain can help create a more
+    transparent market environment, with data that is more accurate and
+    reliable. This in turn can help boost investor confidence and make the
+    markets more efficient. Additionally, the decentralized nature of blockchain
+    can help reduce the risks of fraud and corruption, as well as improve
+    auditability.
+
+    3) **Better Regulation** - real-time information about on-chain events can
     help regulators better understand what's happening with specific projects.
     This, in turn, can lead to more informed decision-making when it comes to
     compliance and interactions with those behind the project.
 
-    3) **Settlement and Clearing** - Settlement and clearing can be complex
+    4) **Settlement and Clearing** - Settlement and clearing can be complex
     processes, especially in traditional financial markets. In these markets,
     central clearing houses act as central counterparties (CCPs) to both sides
     of a trade. This ensures that the trade is matched and executed even if one
