Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -166,6 +166,9 @@
   title: Benefits of Tokenization
   shortTitle: Benefits
   details: >-
+    Some benefits of tokenization of assets on blockchain include:
+
+
     ### Innovation
 
     1) **Compensation** - Tokens offer a more flexible way of compensating team
