--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -169,7 +169,7 @@
     Some benefits of tokenization include:
 
 
-    ### Innovation
+    ### Innovation for Today's needs
 
     1) **Compensation** - Tokens offer a more flexible way of compensating team
     members than was previously available. For example, you can compensate team
