Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -169,7 +169,7 @@
     Some benefits of tokenization include:
 
 
-    ### Innovation for Today's needs
+    ### Innovation for Today's Needs
 
     1) **Compensation** - Tokens offer a more flexible way of compensating team
     members than was previously available. For example, you can compensate team
