--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -163,8 +163,15 @@
     educated blockchain user, we should be aware whenever we are depositing
     custody of our assets or tokens to anyone else.
 - key: common-terms-related-to-tokenization
+  title: Common Terms related to Tokenization
   shortTitle: Common Terms
-  details: >+
+  details: >
+    ### Inflation
+
+
+    ### Deflation
+
+
     ### Bonding Curve
 
     A bonding curve is a type of pricing mechanism that is commonly used in the
@@ -173,7 +180,28 @@
     demand of a particular token, and determines the price at which that token
     can be bought or sold.
 
-  title: Common Terms related to Tokenization
+
+    Some benefits of bonding curves in the world of cryptocurrency and
+    decentralized finance (DeFi) include:
+
+    1) They provide a transparent and predictable mechanism for determining the
+    price of a token, which can help to promote fair and efficient markets.
+
+    2) They can be used to incentivize certain behaviours or reward certain
+    contributions to the network, which can help to align the interests of
+    different users and promote the long-term growth and success of the project.
+
+    3) They can enable the creation of new financial instruments and investment
+    opportunities that were previously difficult or impossible to manage.
+
+
+    ### Total Supply
+
+
+    ### Circulating Supply
+
+
+    ### Market Cap
 - key: benefits-of-tokenization
   title: Benefits of Tokenization
   shortTitle: Benefits
