--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -166,6 +166,8 @@
   title: Common Terms related to Tokenization
   shortTitle: Common Terms
   details: >
+    ## Related to Token Creation
+
     ### Inflation
 
 
@@ -193,6 +195,32 @@
 
     3) They can enable the creation of new financial instruments and investment
     opportunities that were previously difficult or impossible to manage.
+
+
+    ## Terms that show the current state of the token
+
+
+    Total supply: the total number of tokens that have been created or issued by
+    a particular cryptocurrency project.
+
+
+    Circulating supply: the number of tokens that are currently in circulation
+    and available for trading on the market.
+
+
+    Market capitalization (market cap): the total value of all the tokens in
+    circulation, calculated by multiplying the circulating supply of the token
+    by its current market price.
+
+
+    Token burn: the process of permanently destroying a certain number of
+    tokens, which can be used to reduce the total supply and potentially
+    increase the value of the remaining tokens.
+
+
+    Token vesting: a schedule for the release of tokens over time, which can be
+    used to incentivize certain behaviours or reward certain contributions to a
+    project.
 
 
     ### Total Supply
