Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -207,7 +207,7 @@
     opportunities that were previously difficult or impossible to manage.
 
 
-    ### Terms that show the current state of the token
+    ### Terms used to understand current token price
 
 
     #### Total supply
