Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -176,7 +176,7 @@
     creating a design. This article covers some of the most important terms.
 
 
-    ### Related to Token Creation
+    ### Terms related to token creation
 
     #### Inflation
 
