Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -180,8 +180,33 @@
 
     #### Inflation
 
+    Inflation in the cryptocurrency world simply refers to the increase in the
+    supply of tokens over time. When the supply of tokens goes up, the value of
+    each individual token can sometimes go down as a result. However, inflation
+    can also provide the funding needed during a project's growth stage, which
+    can lead to a healthy overall state for the project. So inflation is
+    contextual and might not always lead to a lower price for individual tokens.
+    What matters most is how the inflation is being used?
+
 
     #### Deflation
+
+    Deflation in the world of cryptocurrency refers to the phenomenon of the
+    supply of tokens decreasing over time, which can lead to an increase in the
+    value of each individual token. Deflation can occur for a variety of reasons
+    in the crypto world, including:
+
+    1. Token burns: some cryptocurrency projects may implement a token burn, in
+    which a certain number of tokens are permanently destroyed. This can reduce
+    the overall supply of tokens and lead to deflation.
+
+    2. Decreased issuance: some cryptocurrency projects may decrease the rate at
+    which new tokens are created and issued over time. This can reduce the
+    overall supply of tokens and lead to deflation.
+
+
+    Similar to inflation, deflation is also contextual. 
+
 
 
     #### Bonding Curve
