Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/course.yaml
+++ b/src/course.yaml
@@ -75,10 +75,24 @@ topics:
     completionWeek: Done
   - key: tokenization
     title: Tokenization
-    details: |-
-      This chapter explains
-      1) Different types of tokes
-      2) Advantages of Tokenization
+    details: >-
+      Tokenization is a way of raising funds, paying team members, improving
+      customer acquisition, and giving rewards using tokens. It is a relatively
+      new method and not as well-known as other methods. Tokenization is an
+      important topic in the crypto world. 
+
+
+      This chapter will explain: 
+
+      1) Why tokenization is needed
+
+      2) Types of tokens
+
+      3) Most important terms
+
+      4) Advantages of Tokenization
+
+      5) Downsides of Tokenization
     explanations: tokenization.yaml
   - title: Lending and Credit
     key: lending-and-credit
