--- a/src/course.yaml
+++ b/src/course.yaml
@@ -11,7 +11,7 @@ highlights:
   - All DeFi building blocks
   - Summaries and questions for each chapter
 publishStatus: Live
-thumbnail: https://d31h13bdjwgzxs.cloudfront.net/courses/DoDAO/DeFi/defi_logo.jpeg
+thumbnail: https://d31h13bdjwgzxs.cloudfront.net/courses/DoDAO/CourseIcons/defi_course.png
 details: >
   This course, DeFi 101, will introduce the learners to the world of blockchain
   and how it can be incorporated into the current financial system making it
