Add necessary files

--- a/src/course.yaml
+++ b/src/course.yaml
@@ -1,9 +1,6 @@
 title: DeFi 101 Course (In Progress)
 key: defi-course
-summary: >
-  Decentralised Finance (DeFi) is the upcoming revolution in the world which
-  would result in the complete transformation in the functioning of the finance
-  sector using blockchain technology as its core.
+summary: This is a detailed DeFi course
 highlights:
   - Intro to Decentralized Finance
   - DeFi vs CeFi
